remove option to switch off checksumming

--- a/csd3-side/notebooks/swift.ipynb
+++ b/csd3-side/notebooks/swift.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "<swiftclient.client.Connection at 0x7f4986e0c6a0>"
+       "<swiftclient.client.Connection at 0x7f35346dd660>"
       ]
      },
      "execution_count": 3,
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "<swiftclient.service.SwiftService at 0x7f49742c0f40>"
+       "<swiftclient.service.SwiftService at 0x7f35346dd450>"
       ]
      },
      "execution_count": 4,
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "be364ad9",
    "metadata": {},
    "outputs": [],
@@ -169,17 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "e537bf21",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['/path/to/a_string']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,23 +190,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "3bc7858c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(current_objects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6154c4e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_string = 'a_string'\n",
+    "metadata = 'somethign about a_string'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "23fd758c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'7a0d3f5c88466513b32cee16e0620162'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "swift.put_object(container=bucket_name, obj='/path/to/a_string', contents=a_string, headers={'x-object-meta-zip-contents':metadata})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c016996e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bob = swift.get_object(container=bucket_name, obj='/path/to/a_string')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "530f0b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'somethign about a_string'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bob[0]['x-object-meta-zip-contents']"
    ]
   },
   {
