prepend all S3 host URLs with https://

--- a/csd3-side/notebooks/remove_bucket.ipynb
+++ b/csd3-side/notebooks/remove_bucket.ipynb
@@ -26,12 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "85a48f3d-4880-49e1-9dbd-79c337ce92c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_host = 'echo.stfc.ac.uk'\n",
+    "s3_host = 'https://echo.stfc.ac.uk'\n",
     "keys = bm.get_keys(os.sep.join([os.environ['HOME'],'lsst_keys.json']))\n",
     "access_key = keys['access_key']\n",
     "secret_key = keys['secret_key']"
