print remote path

--- a/csd3-side/notebooks/swift.ipynb
+++ b/csd3-side/notebooks/swift.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "be364ad9",
    "metadata": {},
    "outputs": [],
@@ -169,17 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "e537bf21",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/path/to/a_string']"
+       "['/path/to/a_string',\n",
+       " 'rds/project/rds-rPTGgs6He74/davem/dummy_data/large_file/large-file',\n",
+       " 'rds/project/rds-rPTGgs6He74/davem/dummy_data/large_file/large-file/slo/1731664196.000000/6442450944/2147483648/00000000',\n",
+       " 'rds/project/rds-rPTGgs6He74/davem/dummy_data/large_file/large-file/slo/1731664196.000000/6442450944/2147483648/00000001',\n",
+       " 'rds/project/rds-rPTGgs6He74/davem/dummy_data/large_file/large-file/slo/1731664196.000000/6442450944/2147483648/00000002']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,17 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "3bc7858c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
