--- a/scripts/swift_vs_boto3.ipynb
+++ b/scripts/swift_vs_boto3.ipynb
@@ -1923,11 +1923,12 @@
     "## Conclusion\n",
     "\n",
     "- OpenStack Swift API is not 10 times faster than S3 API, it's about as fast.\n",
-    "- OpenStack swiftclient is not 10 times faster than boto3, it's about as fast.\n",
+    "- OpenStack python-swiftclient is not 10 times faster than boto3, it's about as fast.\n",
     "- Using swiftclient with Pandas is not 10 times faster than using boto3 with Pandas, it's about as fast.\n",
     "- Using swiftclient with Dask _is_ __at least__ 10 times faster than using either swiftclient or boto3 with Pandas.\n",
+    "- Using boto3 with Dask is impossible.\n",
     "\n",
-    "Therefore, the combination of swiftclient and Dask is __at least__ 10 times faster than the de facto standards of boto3 and Pandas, because Dask is faster than Pandas, and swiftclient objects are _\"picklable\"_ and boto3 objects are now.\n"
+    "Therefore, the combination of swiftclient and Dask is __at least__ 10 times faster than the de facto industry standards of boto3 and Pandas, because Dask is faster than Pandas, and swiftclient objects __are__ _picklable_ and boto3 objects __are not__ _picklable_.\n"
    ]
   },
   {
