--- a/scripts/md5sum_check.ipynb
+++ b/scripts/md5sum_check.ipynb
@@ -696,8 +696,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "3df98a80-db4e-475f-8e90-5346eb8c7000",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "data = connection.get_object(bucket_name, keys[1])[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "15eb9de9-7307-4257-89de-4df0747ce498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f5f35579-fcb4-48d2-8088-00f09cd1e4b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md5sum = hashlib.md5(data).hexdigest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7dd9b5b9-24bf-4f26-812a-1040ad93fb7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parts = []\n",
+    "num_parts = len(data) // (512*1024**2)\n",
+    "# data.seek(0)\n",
+    "num_parts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "dfd0afe5-e6ac-4dbf-84b6-a1f4fda110a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30191040"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f2e7220-303c-416c-b090-ca45019c4fc1",
    "metadata": {},
    "outputs": [],
    "source": []
