clean_up_zips done

--- a/scripts/md5sum_check.ipynb
+++ b/scripts/md5sum_check.ipynb
@@ -390,10 +390,11 @@
        " 'last-modified': 'Tue, 04 Feb 2025 11:54:21 GMT',\n",
        " 'x-timestamp': '1738670061.55192',\n",
        " 'etag': '6e6565cc676378490db89c87857ed823',\n",
-       " 'x-trans-id': 'tx00000e1b82ddb7eb84d9d-0067bde4ee-2fd9a218e-default',\n",
-       " 'x-openstack-request-id': 'tx00000e1b82ddb7eb84d9d-0067bde4ee-2fd9a218e-default',\n",
+       " 'x-trans-id': 'tx00000c2869a0d9bc0c86c-0067bdcb1f-2fd9ae0ba-default',\n",
+       " 'x-openstack-request-id': 'tx00000c2869a0d9bc0c86c-0067bdcb1f-2fd9ae0ba-default',\n",
        " 'content-type': 'multipart/mixed',\n",
-       " 'date': 'Tue, 25 Feb 2025 15:42:38 GMT'}"
+       " 'date': 'Tue, 25 Feb 2025 13:52:31 GMT',\n",
+       " 'connection': 'Keep-Alive'}"
       ]
      },
      "execution_count": 10,
@@ -594,195 +595,24 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<swiftclient.client.Connection at 0x7fb5928f2dd0>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (3509423594.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[14], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    swift_objects.append(connection.get_object('LSST-IR-FUSION-Butlers', ''\u001b[0m\n\u001b[0m                                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
     }
    ],
    "source": [
-    "connection"
+    "swift_objects = []\n",
+    "swift_objects.append(connection.get_object('LSST-IR-FUSION-Butlers', 'butler_full_20221201/data/u/ir-shir1/DRP/vikingSingleFrame/20221208T120837Z/calexp/20110627/K/VIRCAM-Ks/314139/calexp_VIRCAM_K_VIRCAM-Ks_314139_ccd3_u_ir-shir1_DRP_vikingSingleFrame_20221208T120837Z.fits'))\n",
+    "swift_objects.append(connection.get_object('LSST-IR-FUSION-Butlers', ''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "e45d7125-caea-4b09-9450-c4f8b5799eb0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_etag(key, bucket_name, connection):\n",
-    "    return connection.head_object(bucket_name,key)['etag']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "1db8052e-32da-4c4f-b4f9-aa16c0e75f47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bucket_name = 'LSST-IR-FUSION-Butlers'\n",
-    "keys = ['butler_full_20221201/data/u/ir-shir1/DRP/vikingSingleFrame/20221208T120837Z/isr_log/20140302/896356/isr_log_VIRCAM_VIRCAM-Ks_896356_ccd6_u_ir-shir1_DRP_vikingSingleFrame_20221208T120837Z.json','butler_full_20221201/data/u/ir-shir1/DRP/vikingSingleFrame/20221208T120837Z/calexp/20110627/K/VIRCAM-Ks/314139/calexp_VIRCAM_K_VIRCAM-Ks_314139_ccd3_u_ir-shir1_DRP_vikingSingleFrame_20221208T120837Z.fits']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "96a121bd-9a1a-41f5-96dd-350236ee78eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "etags = []\n",
-    "for k in keys:\n",
-    "    etags.append(get_etag(k, bucket_name, connection))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "7990db35-5e67-4af9-9090-602f16f153fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['122206487683ef9a4a44ddd362a15ba8', '42f7a4b3bd16f5f58599a569307e11c2']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "etags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "1c92e340-3cff-4dfc-80f6-2ce314e648dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'content-length': '30191040',\n",
-       " 'accept-ranges': 'bytes',\n",
-       " 'last-modified': 'Tue, 25 Feb 2025 12:52:04 GMT',\n",
-       " 'x-timestamp': '1740487924.55205',\n",
-       " 'etag': '42f7a4b3bd16f5f58599a569307e11c2',\n",
-       " 'x-trans-id': 'tx00000c555350ea4cb1c97-0067bde7d0-2fd9af127-default',\n",
-       " 'x-openstack-request-id': 'tx00000c555350ea4cb1c97-0067bde7d0-2fd9af127-default',\n",
-       " 'content-type': 'image/fits',\n",
-       " 'date': 'Tue, 25 Feb 2025 15:54:56 GMT',\n",
-       " 'connection': 'Keep-Alive'}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wrong_header = connection.head_object(bucket_name,keys[1])\n",
-    "wrong_header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "3df98a80-db4e-475f-8e90-5346eb8c7000",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "data = connection.get_object(bucket_name, keys[1])[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "15eb9de9-7307-4257-89de-4df0747ce498",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import hashlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "f5f35579-fcb4-48d2-8088-00f09cd1e4b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md5sum = hashlib.md5(data).hexdigest()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "7dd9b5b9-24bf-4f26-812a-1040ad93fb7b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parts = []\n",
-    "num_parts = len(data) // (512*1024**2)\n",
-    "# data.seek(0)\n",
-    "num_parts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "dfd0afe5-e6ac-4dbf-84b6-a1f4fda110a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30191040"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f2e7220-303c-416c-b090-ca45019c4fc1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lsst-uk",
    "language": "python",
    "name": "python3"
   },
