--- a/csd3-side/notebooks/quota.ipynb
+++ b/csd3-side/notebooks/quota.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "6aa38796",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "7356a69f",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "61cb27a8",
    "metadata": {},
    "outputs": [],
@@ -41,33 +41,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "0df08ef7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x-timestamp': '1758027895.22436',\n",
-       " 'x-account-container-count': '11',\n",
-       " 'x-account-object-count': '2945109',\n",
-       " 'x-account-bytes-used': '263384991144509',\n",
-       " 'x-account-bytes-used-actual': '263390862028800',\n",
-       " 'x-account-storage-policy-default-placement-container-count': '11',\n",
-       " 'x-account-storage-policy-default-placement-object-count': '2945109',\n",
-       " 'x-account-storage-policy-default-placement-bytes-used': '263384991144509',\n",
-       " 'x-account-storage-policy-default-placement-bytes-used-actual': '263390862028800',\n",
+       "{'x-timestamp': '1758556487.88253',\n",
+       " 'x-account-container-count': '12',\n",
+       " 'x-account-object-count': '2945143',\n",
+       " 'x-account-bytes-used': '263395459095503',\n",
+       " 'x-account-bytes-used-actual': '263401330106368',\n",
+       " 'x-account-storage-policy-default-placement-container-count': '12',\n",
+       " 'x-account-storage-policy-default-placement-object-count': '2945143',\n",
+       " 'x-account-storage-policy-default-placement-bytes-used': '263395459095503',\n",
+       " 'x-account-storage-policy-default-placement-bytes-used-actual': '263401330106368',\n",
        " 'x-account-meta-quota-bytes': '329853488332800',\n",
        " 'accept-ranges': 'bytes',\n",
-       " 'x-trans-id': 'tx000005fa9a7daf7f0ff06-0068c96077-307c38784-default',\n",
-       " 'x-openstack-request-id': 'tx000005fa9a7daf7f0ff06-0068c96077-307c38784-default',\n",
+       " 'x-trans-id': 'tx000008cb9fe1b5acde257-0068d17147-30850e767-default',\n",
+       " 'x-openstack-request-id': 'tx000008cb9fe1b5acde257-0068d17147-30850e767-default',\n",
        " 'content-type': 'application/json; charset=utf-8',\n",
-       " 'content-length': '609',\n",
-       " 'date': 'Tue, 16 Sep 2025 13:04:55 GMT',\n",
+       " 'content-length': '681',\n",
+       " 'date': 'Mon, 22 Sep 2025 15:54:47 GMT',\n",
        " 'connection': 'Keep-Alive'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "c8b035d5",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "da098665",
    "metadata": {},
    "outputs": [
@@ -114,6 +114,7 @@
       "container: LSST-IR-FUSION-ras81, size: 0 GB, objects: 0\n",
       "container: LSST-IR-FUSION-rdsip005, size: 484 GB, objects: 139001\n",
       "container: LSST-IR-FUSION_gen3_conversion, size: 0 GB, objects: 1\n",
+      "container: Somerville-RAL-Transfer-Tests, size: 9 GB, objects: 34\n",
       "container: dmu4, size: 1 GB, objects: 88\n",
       "container: lsst-dac, size: 0 GB, objects: 0\n",
       "container: lsst-drp-config, size: 0 GB, objects: 9\n",
@@ -137,7 +138,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Used: 263390862028800 B (245301.856 GB)\n"
+      "Used: 263401330106368 B (245311.605 GB)\n",
+      "Used: 263390862028800 B (245301.856 GB)\n",
+      "Used: 263390862028800 B (245301.856 GB)\n",
+      "Used: 263390862028800 B (245301.856 GB)\n",
+      "Used: 263390862028800 B (245301.856 GB)\n",
+      "Used: 263390862028800 B (245301.856 GB)\n",
+      "Used: 263390862028800 B (245301.856 GB)\n",
+      "Used: 263390862028800 B (245301.856 GB)\n",
+      "Used: 263390862028800 B (245301.856 GB)\n",
+      "Used: 263390862028800 B (245301.856 GB)\n",
+      "Used: 263390862028800 B (245301.856 GB)\n",
+      "Used: 263390862032896 B (245301.856 GB)\n",
+      "Used: 263401408749568 B (245311.678 GB)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m used_actual_gb \u001b[38;5;241m=\u001b[39m used_actual \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m1024\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m3\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUsed: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mused_actual\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m B (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mused_actual_gb\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m GB)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m60\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
