--- a/csd3-side/notebooks/quota.ipynb
+++ b/csd3-side/notebooks/quota.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "6aa38796",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "7356a69f",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "61cb27a8",
    "metadata": {},
    "outputs": [],
@@ -41,33 +41,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "0df08ef7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x-timestamp': '1758707742.92151',\n",
-       " 'x-account-container-count': '12',\n",
-       " 'x-account-object-count': '2945173',\n",
-       " 'x-account-bytes-used': '263450813603025',\n",
-       " 'x-account-bytes-used-actual': '263456684670976',\n",
-       " 'x-account-storage-policy-default-placement-container-count': '12',\n",
-       " 'x-account-storage-policy-default-placement-object-count': '2945173',\n",
-       " 'x-account-storage-policy-default-placement-bytes-used': '263450813603025',\n",
-       " 'x-account-storage-policy-default-placement-bytes-used-actual': '263456684670976',\n",
+       "{'x-timestamp': '1759315215.98445',\n",
+       " 'x-account-container-count': '24',\n",
+       " 'x-account-object-count': '2945890',\n",
+       " 'x-account-bytes-used': '263903516329315',\n",
+       " 'x-account-bytes-used-actual': '263909388394496',\n",
+       " 'x-account-storage-policy-default-placement-container-count': '24',\n",
+       " 'x-account-storage-policy-default-placement-object-count': '2945890',\n",
+       " 'x-account-storage-policy-default-placement-bytes-used': '263903516329315',\n",
+       " 'x-account-storage-policy-default-placement-bytes-used-actual': '263909388394496',\n",
        " 'x-account-meta-quota-bytes': '329853488332800',\n",
        " 'accept-ranges': 'bytes',\n",
-       " 'x-trans-id': 'tx00000ddaa16e79ce6caec-0068d3c01e-30858431c-default',\n",
-       " 'x-openstack-request-id': 'tx00000ddaa16e79ce6caec-0068d3c01e-30858431c-default',\n",
+       " 'x-trans-id': 'tx000006b028d173cf143a7-0068dd050f-3085125cb-default',\n",
+       " 'x-openstack-request-id': 'tx000006b028d173cf143a7-0068dd050f-3085125cb-default',\n",
        " 'content-type': 'application/json; charset=utf-8',\n",
-       " 'content-length': '681',\n",
-       " 'date': 'Wed, 24 Sep 2025 09:55:42 GMT',\n",
+       " 'content-length': '1582',\n",
+       " 'date': 'Wed, 01 Oct 2025 10:40:15 GMT',\n",
        " 'connection': 'Keep-Alive'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "c8b035d5",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quota : 300 TB, Used: 239 TB, Usage: 79.9%\n"
+      "Quota : 300 TB, Used: 240 TB, Usage: 80.0%\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "da098665",
    "metadata": {},
    "outputs": [
@@ -107,6 +107,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "container: CSD3-RAL-Transfer-Tests_streaming, size: 43 GB, objects: 96\n",
+      "container: CSD3-RAL-Transfer-Tests_streaming_segments, size: 0 GB, objects: 0\n",
+      "container: Cirrus-RAL-Transfer-Tests_hdd, size: 29 GB, objects: 76\n",
+      "container: Cirrus-RAL-Transfer-Tests_hdd-inmem, size: 0 GB, objects: 0\n",
+      "container: Cirrus-RAL-Transfer-Tests_hdd_segments, size: 15 GB, objects: 20\n",
+      "container: Cirrus-RAL-Transfer-Tests_ssd, size: 29 GB, objects: 77\n",
+      "container: Cirrus-RAL-Transfer-Tests_ssd_segments, size: 15 GB, objects: 20\n",
       "container: DRP, size: 0 GB, objects: 0\n",
       "container: LSST-IR-FUSION, size: 6431 GB, objects: 924586\n",
       "container: LSST-IR-FUSION-Butlers-full, size: 0 GB, objects: 1\n",
@@ -114,8 +121,13 @@
       "container: LSST-IR-FUSION-ras81, size: 0 GB, objects: 0\n",
       "container: LSST-IR-FUSION-rdsip005, size: 484 GB, objects: 139001\n",
       "container: LSST-IR-FUSION_gen3_conversion, size: 0 GB, objects: 1\n",
-      "container: Somerville-RAL-Transfer-Tests, size: 61 GB, objects: 64\n",
+      "container: Somerville-RAL-Transfer-Tests, size: 29 GB, objects: 85\n",
+      "container: Somerville-RAL-Transfer-Tests_hdd, size: 31 GB, objects: 88\n",
+      "container: Somerville-RAL-Transfer-Tests_hdd_segments, size: 89 GB, objects: 100\n",
+      "container: Somerville-RAL-Transfer-Tests_segments, size: 191 GB, objects: 211\n",
       "container: dmu4, size: 1 GB, objects: 88\n",
+      "container: est_serv_ul_container, size: 3 GB, objects: 2\n",
+      "container: est_serv_ul_container_segments, size: 5 GB, objects: 6\n",
       "container: lsst-dac, size: 0 GB, objects: 0\n",
       "container: lsst-drp-config, size: 0 GB, objects: 9\n",
       "container: lsst-test, size: 0 GB, objects: 1\n"
@@ -130,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "e42c9e51",
    "metadata": {},
    "outputs": [],
