--- a/csd3-side/notebooks/quota.ipynb
+++ b/csd3-side/notebooks/quota.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 184,
    "id": "6aa38796",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 185,
    "id": "7356a69f",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 186,
    "id": "61cb27a8",
    "metadata": {},
    "outputs": [],
@@ -41,33 +41,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 187,
    "id": "0df08ef7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x-timestamp': '1759315215.98445',\n",
-       " 'x-account-container-count': '24',\n",
-       " 'x-account-object-count': '2945890',\n",
-       " 'x-account-bytes-used': '263903516329315',\n",
-       " 'x-account-bytes-used-actual': '263909388394496',\n",
-       " 'x-account-storage-policy-default-placement-container-count': '24',\n",
-       " 'x-account-storage-policy-default-placement-object-count': '2945890',\n",
-       " 'x-account-storage-policy-default-placement-bytes-used': '263903516329315',\n",
-       " 'x-account-storage-policy-default-placement-bytes-used-actual': '263909388394496',\n",
+       "{'x-timestamp': '1759868430.64720',\n",
+       " 'x-account-container-count': '13',\n",
+       " 'x-account-object-count': '2555909',\n",
+       " 'x-account-bytes-used': '233458765124403',\n",
+       " 'x-account-bytes-used-actual': '233463850979328',\n",
+       " 'x-account-storage-policy-default-placement-container-count': '13',\n",
+       " 'x-account-storage-policy-default-placement-object-count': '2555909',\n",
+       " 'x-account-storage-policy-default-placement-bytes-used': '233458765124403',\n",
+       " 'x-account-storage-policy-default-placement-bytes-used-actual': '233463850979328',\n",
        " 'x-account-meta-quota-bytes': '329853488332800',\n",
        " 'accept-ranges': 'bytes',\n",
-       " 'x-trans-id': 'tx000006b028d173cf143a7-0068dd050f-3085125cb-default',\n",
-       " 'x-openstack-request-id': 'tx000006b028d173cf143a7-0068dd050f-3085125cb-default',\n",
+       " 'x-trans-id': 'tx0000024101d422ba1e35d-0068e5760e-308f5aa46-default',\n",
+       " 'x-openstack-request-id': 'tx0000024101d422ba1e35d-0068e5760e-308f5aa46-default',\n",
        " 'content-type': 'application/json; charset=utf-8',\n",
-       " 'content-length': '1582',\n",
-       " 'date': 'Wed, 01 Oct 2025 10:40:15 GMT',\n",
+       " 'content-length': '777',\n",
+       " 'date': 'Tue, 07 Oct 2025 20:20:30 GMT',\n",
        " 'connection': 'Keep-Alive'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 188,
    "id": "c8b035d5",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quota : 300 TB, Used: 240 TB, Usage: 80.0%\n"
+      "Quota : 300 TB, Used: 212 TB, Usage: 70.8%\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 189,
    "id": "da098665",
    "metadata": {},
    "outputs": [
@@ -107,42 +107,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "container: CSD3-RAL-Transfer-Tests_streaming, size: 43 GB, objects: 96\n",
-      "container: CSD3-RAL-Transfer-Tests_streaming_segments, size: 0 GB, objects: 0\n",
-      "container: Cirrus-RAL-Transfer-Tests_hdd, size: 29 GB, objects: 76\n",
-      "container: Cirrus-RAL-Transfer-Tests_hdd-inmem, size: 0 GB, objects: 0\n",
-      "container: Cirrus-RAL-Transfer-Tests_hdd_segments, size: 15 GB, objects: 20\n",
-      "container: Cirrus-RAL-Transfer-Tests_ssd, size: 29 GB, objects: 77\n",
-      "container: Cirrus-RAL-Transfer-Tests_ssd_segments, size: 15 GB, objects: 20\n",
-      "container: DRP, size: 0 GB, objects: 0\n",
-      "container: LSST-IR-FUSION, size: 6431 GB, objects: 924586\n",
-      "container: LSST-IR-FUSION-Butlers-full, size: 0 GB, objects: 1\n",
-      "container: LSST-IR-FUSION-Butlers-wide, size: 238378 GB, objects: 1881422\n",
-      "container: LSST-IR-FUSION-ras81, size: 0 GB, objects: 0\n",
-      "container: LSST-IR-FUSION-rdsip005, size: 484 GB, objects: 139001\n",
-      "container: LSST-IR-FUSION_gen3_conversion, size: 0 GB, objects: 1\n",
-      "container: Somerville-RAL-Transfer-Tests, size: 29 GB, objects: 85\n",
-      "container: Somerville-RAL-Transfer-Tests_hdd, size: 31 GB, objects: 88\n",
-      "container: Somerville-RAL-Transfer-Tests_hdd_segments, size: 89 GB, objects: 100\n",
-      "container: Somerville-RAL-Transfer-Tests_segments, size: 191 GB, objects: 211\n",
-      "container: dmu4, size: 1 GB, objects: 88\n",
-      "container: est_serv_ul_container, size: 3 GB, objects: 2\n",
-      "container: est_serv_ul_container_segments, size: 5 GB, objects: 6\n",
-      "container: lsst-dac, size: 0 GB, objects: 0\n",
-      "container: lsst-drp-config, size: 0 GB, objects: 9\n",
-      "container: lsst-test, size: 0 GB, objects: 1\n"
+      "container: DRP, size: 0 GiB, objects: 0\n",
+      "container: LSST-IR-FUSION, size: 6431 GiB, objects: 924586\n",
+      "container: LSST-IR-FUSION-Butlers-full, size: 0 GiB, objects: 1\n",
+      "container: LSST-IR-FUSION-Butlers-wide, size: 193170 GiB, objects: 1477617\n",
+      "container: LSST-IR-FUSION-Butlers-wide-comp, size: 17329 GiB, objects: 14685\n",
+      "container: LSST-IR-FUSION-ras81, size: 0 GiB, objects: 0\n",
+      "container: LSST-IR-FUSION-rdsip005, size: 484 GiB, objects: 139001\n",
+      "container: LSST-IR-FUSION_gen3_conversion, size: 0 GiB, objects: 1\n",
+      "container: est_serv_ul_container, size: 3 GiB, objects: 2\n",
+      "container: est_serv_ul_container_segments, size: 5 GiB, objects: 6\n",
+      "container: lsst-dac, size: 0 GiB, objects: 0\n",
+      "container: lsst-drp-config, size: 0 GiB, objects: 9\n",
+      "container: lsst-test, size: 0 GiB, objects: 1\n"
      ]
     }
    ],
    "source": [
     "containers = conn.get_account()[1]\n",
     "for container in containers:\n",
-    "    print(f'container: {container[\"name\"]}, size: {container[\"bytes\"] // 1024**3} GB, objects: {container[\"count\"]}')"
+    "    print(f'container: {container[\"name\"]}, size: {container[\"bytes\"] // 1024**3} GiB, objects: {container[\"count\"]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 190,
    "id": "e42c9e51",
    "metadata": {},
    "outputs": [],
