--- a/csd3-side/notebooks/quota.ipynb
+++ b/csd3-side/notebooks/quota.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "id": "6aa38796",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 2,
    "id": "7356a69f",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 3,
    "id": "61cb27a8",
    "metadata": {},
    "outputs": [],
@@ -41,33 +41,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "id": "0df08ef7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x-timestamp': '1759868430.64720',\n",
-       " 'x-account-container-count': '13',\n",
-       " 'x-account-object-count': '2555909',\n",
-       " 'x-account-bytes-used': '233458765124403',\n",
-       " 'x-account-bytes-used-actual': '233463850979328',\n",
-       " 'x-account-storage-policy-default-placement-container-count': '13',\n",
-       " 'x-account-storage-policy-default-placement-object-count': '2555909',\n",
-       " 'x-account-storage-policy-default-placement-bytes-used': '233458765124403',\n",
-       " 'x-account-storage-policy-default-placement-bytes-used-actual': '233463850979328',\n",
+       "{'x-timestamp': '1759913365.48462',\n",
+       " 'x-account-container-count': '14',\n",
+       " 'x-account-object-count': '2583410',\n",
+       " 'x-account-bytes-used': '281741484495893',\n",
+       " 'x-account-bytes-used-actual': '281746629664768',\n",
+       " 'x-account-storage-policy-default-placement-container-count': '14',\n",
+       " 'x-account-storage-policy-default-placement-object-count': '2583410',\n",
+       " 'x-account-storage-policy-default-placement-bytes-used': '281741484495893',\n",
+       " 'x-account-storage-policy-default-placement-bytes-used-actual': '281746629664768',\n",
        " 'x-account-meta-quota-bytes': '329853488332800',\n",
        " 'accept-ranges': 'bytes',\n",
-       " 'x-trans-id': 'tx0000024101d422ba1e35d-0068e5760e-308f5aa46-default',\n",
-       " 'x-openstack-request-id': 'tx0000024101d422ba1e35d-0068e5760e-308f5aa46-default',\n",
+       " 'x-trans-id': 'tx00000db8184ccba68bbe7-0068e62595-308f5a982-default',\n",
+       " 'x-openstack-request-id': 'tx00000db8184ccba68bbe7-0068e62595-308f5a982-default',\n",
        " 'content-type': 'application/json; charset=utf-8',\n",
-       " 'content-length': '777',\n",
-       " 'date': 'Tue, 07 Oct 2025 20:20:30 GMT',\n",
+       " 'content-length': '860',\n",
+       " 'date': 'Wed, 08 Oct 2025 08:49:25 GMT',\n",
        " 'connection': 'Keep-Alive'}"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
    "id": "c8b035d5",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quota : 300 TB, Used: 212 TB, Usage: 70.8%\n"
+      "Quota : 300 TB, Used: 256 TB, Usage: 85.4%\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 6,
    "id": "da098665",
    "metadata": {},
    "outputs": [
@@ -112,6 +112,7 @@
       "container: LSST-IR-FUSION-Butlers-full, size: 0 GiB, objects: 1\n",
       "container: LSST-IR-FUSION-Butlers-wide, size: 193170 GiB, objects: 1477617\n",
       "container: LSST-IR-FUSION-Butlers-wide-comp, size: 17329 GiB, objects: 14685\n",
+      "container: LSST-IR-FUSION-Butlers-wide-nocomp, size: 44966 GiB, objects: 27501\n",
       "container: LSST-IR-FUSION-ras81, size: 0 GiB, objects: 0\n",
       "container: LSST-IR-FUSION-rdsip005, size: 484 GiB, objects: 139001\n",
       "container: LSST-IR-FUSION_gen3_conversion, size: 0 GiB, objects: 1\n",
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 7,
    "id": "e42c9e51",
    "metadata": {},
    "outputs": [],
