--- a/csd3-side/notebooks/quota.ipynb
+++ b/csd3-side/notebooks/quota.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 1,
    "id": "6aa38796",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "id": "7356a69f",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "id": "61cb27a8",
    "metadata": {},
    "outputs": [],
@@ -41,33 +41,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 4,
    "id": "0df08ef7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x-timestamp': '1760366849.04093',\n",
-       " 'x-account-container-count': '14',\n",
+       "{'x-timestamp': '1760435705.89999',\n",
+       " 'x-account-container-count': '16',\n",
        " 'x-account-object-count': '2442940',\n",
        " 'x-account-bytes-used': '217779873925439',\n",
        " 'x-account-bytes-used-actual': '217784676425728',\n",
-       " 'x-account-storage-policy-default-placement-container-count': '14',\n",
+       " 'x-account-storage-policy-default-placement-container-count': '16',\n",
        " 'x-account-storage-policy-default-placement-object-count': '2442940',\n",
        " 'x-account-storage-policy-default-placement-bytes-used': '217779873925439',\n",
        " 'x-account-storage-policy-default-placement-bytes-used-actual': '217784676425728',\n",
        " 'x-account-meta-quota-bytes': '1125899906842624',\n",
        " 'accept-ranges': 'bytes',\n",
-       " 'x-trans-id': 'tx00000a6430f5a604035be-0068ed1100-308f5a982-default',\n",
-       " 'x-openstack-request-id': 'tx00000a6430f5a604035be-0068ed1100-308f5a982-default',\n",
+       " 'x-trans-id': 'tx000009c21192491719f63-0068ee1df9-308d0c817-default',\n",
+       " 'x-openstack-request-id': 'tx000009c21192491719f63-0068ee1df9-308d0c817-default',\n",
        " 'content-type': 'application/json; charset=utf-8',\n",
-       " 'content-length': '855',\n",
-       " 'date': 'Mon, 13 Oct 2025 14:47:29 GMT',\n",
+       " 'content-length': '970',\n",
+       " 'date': 'Tue, 14 Oct 2025 09:55:05 GMT',\n",
        " 'connection': 'Keep-Alive'}"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 5,
    "id": "c8b035d5",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 6,
    "id": "da098665",
    "metadata": {},
    "outputs": [
@@ -112,10 +112,12 @@
       "container: LSST-IR-FUSION-Butlers-full, size: 0 GiB, objects: 1\n",
       "container: LSST-IR-FUSION-Butlers-wide, size: 193170 GiB, objects: 1477617\n",
       "container: LSST-IR-FUSION-Butlers-wide-comp, size: 1085 GiB, objects: 1236\n",
+      "container: LSST-IR-FUSION-Butlers-wide-nocollate, size: 0 GiB, objects: 0\n",
       "container: LSST-IR-FUSION-Butlers-wide-nocomp, size: 1983 GiB, objects: 1242\n",
       "container: LSST-IR-FUSION-ras81, size: 0 GiB, objects: 0\n",
       "container: LSST-IR-FUSION-rdsip005, size: 143 GiB, objects: 38239\n",
       "container: LSST-IR-FUSION_gen3_conversion, size: 0 GiB, objects: 1\n",
+      "container: VISTA_segments, size: 0 GiB, objects: 0\n",
       "container: est_serv_ul_container, size: 3 GiB, objects: 2\n",
       "container: est_serv_ul_container_segments, size: 5 GiB, objects: 6\n",
       "container: lsst-dac, size: 0 GiB, objects: 0\n",
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 7,
    "id": "e42c9e51",
    "metadata": {},
    "outputs": [],
