--- a/csd3-side/notebooks/quota.ipynb
+++ b/csd3-side/notebooks/quota.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 93,
    "id": "6aa38796",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 94,
    "id": "7356a69f",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 95,
    "id": "61cb27a8",
    "metadata": {},
    "outputs": [],
@@ -41,33 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 96,
    "id": "0df08ef7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x-timestamp': '1760435705.89999',\n",
-       " 'x-account-container-count': '16',\n",
-       " 'x-account-object-count': '2442940',\n",
-       " 'x-account-bytes-used': '217779873925439',\n",
-       " 'x-account-bytes-used-actual': '217784676425728',\n",
-       " 'x-account-storage-policy-default-placement-container-count': '16',\n",
-       " 'x-account-storage-policy-default-placement-object-count': '2442940',\n",
-       " 'x-account-storage-policy-default-placement-bytes-used': '217779873925439',\n",
-       " 'x-account-storage-policy-default-placement-bytes-used-actual': '217784676425728',\n",
-       " 'x-account-meta-quota-bytes': '1125899906842624',\n",
-       " 'accept-ranges': 'bytes',\n",
-       " 'x-trans-id': 'tx000009c21192491719f63-0068ee1df9-308d0c817-default',\n",
-       " 'x-openstack-request-id': 'tx000009c21192491719f63-0068ee1df9-308d0c817-default',\n",
-       " 'content-type': 'application/json; charset=utf-8',\n",
-       " 'content-length': '970',\n",
-       " 'date': 'Tue, 14 Oct 2025 09:55:05 GMT',\n",
-       " 'connection': 'Keep-Alive'}"
+       "{'x-timestamp': '1761215703.43990', 'x-account-container-count': '31', 'x-account-object-count': '2458749', 'x-account-bytes-used': '220387785256778', 'x-account-bytes-used-actual': '220392619683840', 'x-account-storage-policy-default-placement-container-count': '31', 'x-account-storage-policy-default-placement-object-count': '2458749', 'x-account-storage-policy-default-placement-bytes-used': '220387785256778', 'x-account-storage-policy-default-placement-bytes-used-actual': '220392619683840', 'x-account-meta-quota-bytes': '1125899906842624', 'accept-ranges': 'bytes', 'x-trans-id': 'tx00000605d397d0f5f4038-0068fa04d6-308f57e5c-default', 'x-openstack-request-id': 'tx00000605d397d0f5f4038-0068fa04d6-308f57e5c-default', 'content-type': 'application/json; charset=utf-8', 'content-length': '2435', 'date': 'Thu, 23 Oct 2025 10:35:03 GMT', 'connection': 'Keep-Alive'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 97,
    "id": "c8b035d5",
    "metadata": {},
    "outputs": [
@@ -87,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quota : 1024 TB, Used: 198 TB, Usage: 19.3%\n"
+      "Quota : 1024 TB, Used: 200 TB, Usage: 19.6%\n"
      ]
     }
    ],
@@ -99,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 98,
    "id": "da098665",
    "metadata": {},
    "outputs": [
@@ -111,12 +95,27 @@
       "container: LSST-IR-FUSION, size: 6431 GiB, objects: 924586\n",
       "container: LSST-IR-FUSION-Butlers-full, size: 0 GiB, objects: 1\n",
       "container: LSST-IR-FUSION-Butlers-wide, size: 193170 GiB, objects: 1477617\n",
-      "container: LSST-IR-FUSION-Butlers-wide-comp, size: 1085 GiB, objects: 1236\n",
-      "container: LSST-IR-FUSION-Butlers-wide-nocollate, size: 0 GiB, objects: 0\n",
-      "container: LSST-IR-FUSION-Butlers-wide-nocomp, size: 1983 GiB, objects: 1242\n",
       "container: LSST-IR-FUSION-ras81, size: 0 GiB, objects: 0\n",
       "container: LSST-IR-FUSION-rdsip005, size: 143 GiB, objects: 38239\n",
       "container: LSST-IR-FUSION_gen3_conversion, size: 0 GiB, objects: 1\n",
+      "container: Somerville-RAL-Transfer-Tests_cirrus_std_Comp_16-1, size: 306 GiB, objects: 584\n",
+      "container: Somerville-RAL-Transfer-Tests_cirrus_std_Comp_8-2, size: 306 GiB, objects: 584\n",
+      "container: Somerville-RAL-Transfer-Tests_csd3dtn_std_Comp_16-1, size: 317 GiB, objects: 598\n",
+      "container: Somerville-RAL-Transfer-Tests_csd3dtn_std_Comp_48-1, size: 317 GiB, objects: 598\n",
+      "container: Somerville-RAL-Transfer-Tests_csd3dtn_std_Comp_8-2, size: 317 GiB, objects: 598\n",
+      "container: Somerville-RAL-Transfer-Tests_csd3dtn_std_NoCollate_48-1, size: 317 GiB, objects: 8426\n",
+      "container: Somerville-RAL-Transfer-Tests_csd3dtn_std_NoComp_16-1, size: 317 GiB, objects: 598\n",
+      "container: Somerville-RAL-Transfer-Tests_csd3dtn_std_NoComp_48-1, size: 317 GiB, objects: 598\n",
+      "container: Somerville-RAL-Transfer-Tests_csd3dtn_std_NoComp_8-2, size: 317 GiB, objects: 598\n",
+      "container: Somerville-RAL-Transfer-Tests_std_Comp_16-1, size: 290 GiB, objects: 565\n",
+      "container: Somerville-RAL-Transfer-Tests_std_Comp_8-2, size: 290 GiB, objects: 565\n",
+      "container: Somerville-RAL-Transfer-Tests_std_NoComp_16-1, size: 290 GiB, objects: 565\n",
+      "container: Somerville-RAL-Transfer-Tests_std_NoComp_8-2, size: 290 GiB, objects: 565\n",
+      "container: Somerville-RAL-Transfer-Tests_stfc_std_Comp_16-1, size: 300 GiB, objects: 569\n",
+      "container: Somerville-RAL-Transfer-Tests_stfc_std_Comp_8-2, size: 300 GiB, objects: 569\n",
+      "container: Somerville-RAL-Transfer-Tests_stfc_std_NoComp_16-1, size: 300 GiB, objects: 569\n",
+      "container: Somerville-RAL-Transfer-Tests_stfc_std_NoComp_32-1, size: 300 GiB, objects: 569\n",
+      "container: Somerville-RAL-Transfer-Tests_stfc_std_NoComp_8-2, size: 300 GiB, objects: 569\n",
       "container: VISTA_segments, size: 0 GiB, objects: 0\n",
       "container: est_serv_ul_container, size: 3 GiB, objects: 2\n",
       "container: est_serv_ul_container_segments, size: 5 GiB, objects: 6\n",
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 99,
    "id": "e42c9e51",
    "metadata": {},
    "outputs": [],
@@ -164,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
